--- a/src/app/pages/detect-face/detect-face.component.html
+++ b/src/app/pages/detect-face/detect-face.component.html
@@ -9,5 +9,9 @@
         <video #video autoplay playsinline muted></video>
         <canvas #canvasBg class="bg"></canvas>
         <canvas #canvasOv class="ov"></canvas>
+
+        <div class="hud">
+            {{ hudText }}
+          </div>
     </div>
 </div>
