Add new model: yolov8s-face Update Home page

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -16,4 +16,8 @@
     Detect Face
   </button>
 
+  <button routerLink="/detect-face-yolov8s" routerLinkActive="active">
+    Detect Face YOLOv8s
+  </button>
+
 </nav>
